# ecg-explain

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MODEL_CARD.md  Makefile  README.md  pyproject.toml  wget-log
.github/workflows/: ci.yml
app/: README.md  SPACE_README.md  app.py  requirements.txt
configs/: baseline.yaml  smoke.yaml
docs/: DEPLOYMENT.md
results/: baseline_test_metrics.json
scripts/: build_case_studies.py  download_data.py  evaluate.py  explain.py  make_banner.py  train.py
src/ecg_explain/: __init__.py  config.py
src/ecg_explain/data/: __init__.py  dataset.py  labels.py  preprocessing.py
src/ecg_explain/interpret/: __init__.py  gradcam.py
src/ecg_explain/models/: __init__.py  resnet1d.py
src/ecg_explain/training/: __init__.py  losses.py  metrics.py  trainer.py
src/ecg_explain/viz/: __init__.py  ecg_plot.py
tests/: conftest.py  test_app.py  test_config.py  test_data.py  test_interpret.py  test_models.py  test_scripts.py  test_smoke.py  test_training.py  test_viz.py
